<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_quiz_2"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.siz_kimsiz.inson_psixologiyasi.ResultActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/share_text2"
        android:background="@drawable/buttonshapesmall">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/score_image"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/laucherimg"
                    android:src="@drawable/ic_stat_onesignal_default" />

                <TextView
                    android:id="@+id/score_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_below="@+id/score_image"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:layout_marginRight="@dimen/margin_10dp"
                    android:layout_marginBottom="5dp"
                    android:text="You are perfect person"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

    <TextView
        android:id="@+id/share_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/prompt_container"
        android:layout_marginTop="@dimen/margin_20dp"
        android:gravity="center"
        android:text="@string/share_prompt"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/prompt_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttom"
        android:layout_alignParentBottom="false"
        android:layout_marginLeft="@dimen/margin_15dp"
        android:layout_marginTop="@dimen/margin_15dp"
        android:layout_marginRight="@dimen/margin_15dp"
        android:layout_marginBottom="3dp "
        android:orientation="horizontal"
        android:weightSum="10">

        <Button
            android:id="@+id/btn_go_main_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/rectangle_green"
            android:text="@string/main_page"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="3"
            android:background="@color/colorPrimary"
            android:text="@string/share_now"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_play_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/rectangle_red"
            android:text="@string/play_again"
            android:textColor="@color/white" />


    </LinearLayout>

    <include
        android:id="@+id/buttom"
        layout="@layout/content_banner_ad"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
