<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_15dp">

            <ImageView
                android:id="@+id/subject_image"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="false"
                android:padding="@dimen/margin_10dp"
                android:src="@drawable/logo_appp" />


            <TextView
                android:id="@+id/subject_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subject_image"
                android:layout_centerHorizontal="true"
                android:text="Subject title "
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subject_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subject_title"
                android:layout_alignParentBottom="false"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_15dp"
                android:layout_marginBottom="@dimen/margin_15dp"
                android:text="Subject description "
                android:textSize="18sp" />

            <RelativeLayout
                android:id="@+id/startt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subject_description"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="10dp">


                <TextView
                    android:id="@+id/ready_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/subject_description"
                    android:layout_alignParentTop="false"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/margin_15dp"
                    android:text="@string/tayyormisiz"
                    android:textColor="@color/colorPrimary"
                    android:textSize="24sp"
                    android:textStyle="bold|italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ready_text"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <Button
                        android:id="@+id/btn_yes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/ready_text"
                        android:layout_alignParentTop="false"
                        android:layout_centerHorizontal="true"
                        android:layout_marginRight="5dp"
                        android:layout_weight="5"
                        android:background="@drawable/rectangle_blue"
                        android:text="@string/ha_albatta"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/btn_no"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/btn_yes"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="5"
                        android:background="@drawable/rectangle_red"
                        android:text="@string/yoqq"
                        android:textColor="@color/white" />
                </LinearLayout>

            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>


    <include
        android:id="@+id/bottom"
        layout="@layout/content_banner_ad"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true" />

</RelativeLayout>